--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <main>
         <section class="home">
             <h1>Welcome to Z.E.D </h1>
-            <p>Different courses will be offered, each designed to impart skills and <br> knowledge essential for the challenges of the future.</p>
+            <p>Different courses will be offered, each designed to improve your skills for the future.</p>
             <a href="aboutme.html">Learn More About Me</a>
         </section>
     </main>
