--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 
 <section class="course">
     <h1>Courses Offered</h1>
-    <p>More course may be added later on</p>
+    <p>More courses may be added later on</p>
     <!-- Recommendation -->
-    <p> <b>RECOMENDATION: </b>You <u><b>may</b></u> understand better if you take the <b>cybersecurity course</b> first and then the <b>online threats course</b>.</p>
+    <p> <b>RECOMMENDATION: </b>You <u><b>may</b></u> understand better if you take the <b>cybersecurity course</b> first and then the <b>online threats course</b>.</p>
     <div class="row">
         <div class="course-col">
             <a href="cybersecurity.html">
@@ -72,10 +72,10 @@
             </div>
         </div>
         <div class="user-col">
-            <img src="zaid.jpeg">
+           
             <div>
-                <p>this is a realy good website, i learnt a lot........</p>
-                <h3>Name  and age</h3>
+                <p>Overall, this is a wonderfull website was very good and helpful. I was trying to learn about cyberscurity, with the help of this website I was able to get a good understanding of it. Futurmore, the looks of the website is also very neat. However, the courses could have had a better margin. <br><b> 4.5/5</b></p>
+                <h3>Naba Yasmeen (34 years old)</h3>
             </div>
         </div>
     </div>
