--- a/cybersecurity.html
+++ b/cybersecurity.html
@@ -84,7 +84,7 @@
                     <a target="_blank" href="whatsapp_spam.avif">
                       <img src="whatsapp_spam.avif" alt="Northern Lights" width="600" height="400">
                     </a>
-                    <div class="desc"><b>Never Open Suspisious Links</b>. You shoudl always check if the link you click is offical or not. When you click on a suspisous link then your device may get hacked.</div>
+                    <div class="desc"><b>Never Open Suspisious Links</b>. You should always check if the link you click is offical or not. When you click on a suspisous link then your device may get hacked.</div>
                   </div>
                   
                   <div class="gallery">
