--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="aboutme.html">About Me</a></li>
-                    <li><a href="Cource.html">Cources</a></li>
+                    <li><a href="Courses.html">Cources</a></li>
                     <li><a href="Contactme.html">Contact Me</a></li>
                 </ul>
             </div>
