--- a/index.html
+++ b/index.html
@@ -65,17 +65,17 @@
     <p>Please<b> DON`T </b>be shy to leave your <i>feedback</i>.<br> You can vist the <a href="Contactme.html"><b>CONTACT ME</b></a> page to Leave your Feedback.</p>
     <div class="row">
         <div class="user-col">
-            <img src="zaid.jpeg">
+            
             <div>
-                <p>this is a realy good website, i learnt a lot........</p>
-                <h3>Name  and age</h3>
+                <p>Overall, this is a wonderfull website was very good and helpful. I was trying to learn about cyberscurity, with the help of this website I was able to get a good understanding of it. Futurmore, the looks of the website is also very neat. However, the courses could have had a better margin. <br><b> 4.5/5</b></p>
+                <h3>Naba Yasmeen (34 years old)</h3>
             </div>
         </div>
         <div class="user-col">
            
             <div>
-                <p>Overall, this is a wonderfull website was very good and helpful. I was trying to learn about cyberscurity, with the help of this website I was able to get a good understanding of it. Futurmore, the looks of the website is also very neat. However, the courses could have had a better margin. <br><b> 4.5/5</b></p>
-                <h3>Naba Yasmeen (34 years old)</h3>
+                <p>This website has a very clean and modern design that makes the understanding and visibility of the topic easier to acquire, the content in the site is really helpful and easy to follow along, and I think adding a quiz to end each course was a fabulous idea. Althought, the test could have been a little harder. <br><b> 4.5/5</b></p>
+                <h3>Neetu Daniella Roy (15 years old)</h3>
             </div>
         </div>
     </div>
